--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,7 +1,8 @@
-<app-top-bar class="top-bar">
-    <h1>ALE KINO</h1>
-    <div class="top-bar">
-        <button>🛒</button>
-        <button>Zaloguj</button>
+<div class="top-bar">
+    <p class="top-bar--title">KINO</p>
+    <div class="top-bar--login-panel">
+    <button>🛒</button>
+    <button>Zaloguj</button>
     </div>
-</app-top-bar>
+</div>
+<hr>
