--- a/src/app/login-form/login-form.component.html
+++ b/src/app/login-form/login-form.component.html
@@ -1,1 +1,8 @@
 <p>login-form works!</p>
+<!-- <form [formGroup]="loginForm" (ngSubmit)="login">
+    <label>e-mail:<input formControlName="login"></label>
+    <label>hasło:<input formControlName="password"></label>
+    <button type="button">Zaloguj</button>
+</form> -->
+
+
