--- a/src/app/list-of-movies/list-of-movies.component.html
+++ b/src/app/list-of-movies/list-of-movies.component.html
@@ -1,1 +1,5 @@
-<p>list-of-movies works!</p>
+<div class="listOfMoviesWrapper">
+    <p>list-of-movies works!</p>
+    <app-calendar></app-calendar>
+</div>
+
