--- a/src/app/list-of-movies/calendar/calendar.component.css
+++ b/src/app/list-of-movies/calendar/calendar.component.css
@@ -7,8 +7,10 @@
     display: inline-block;
     width: 100px;
     height: 25px;
+    border-radius: 15%;
 }
 button{
     width: 100%;
     height: 100%;
 }
+
