--- a/src/app/list-of-movies/calendar/calendar.component.html
+++ b/src/app/list-of-movies/calendar/calendar.component.html
@@ -19,7 +19,7 @@
 </mat-button-toggle-group> -->
 
 <mat-button-toggle-group name="chooseDay" aria-label="Choose a day">
-    <mat-button-toggle *ngFor='let day of week' [routerLink]="['/', day]" value=day>{{day}}</mat-button-toggle>
+    <mat-button-toggle *ngFor='let day of week' [routerLink]="['/repertoire/', day]" value=day>{{day}}</mat-button-toggle>
 </mat-button-toggle-group>
 
 <!-- <div name="chooseDay" aria-label="Choose a day">
