--- a/src/app/list-of-movies/list-of-movies.component.html
+++ b/src/app/list-of-movies/list-of-movies.component.html
@@ -1,8 +1,7 @@
 <div class="listOfMoviesWrapper">
     <p>list-of-movies works!</p>
     <app-calendar></app-calendar>
-    <!-- <div *ngFor="let movie of movies | async">
-        <app-single-movie [movie]="movie"></app-single-movie>
-    </div> -->
+    <!-- <div *ngFor="let movie of movies | async"> -->
+        <app-single-movie [movie]="movie" *ngFor="let movie of movies | async"></app-single-movie>
+    <!-- </div> -->
 </div>
-
