--- a/src/app/list-of-movies/single-movie/single-movie.component.html
+++ b/src/app/list-of-movies/single-movie/single-movie.component.html
@@ -1,3 +1,4 @@
+    <div class="movie-wrapper" >
     <div class="movie-image">
         <div class="movie-image-poster">
             <img src={{movie.image}} alt="">
@@ -17,3 +18,5 @@
     <div class="movie-rating">
         <p class="rate">{{movie.rating}} / 10</p>
     </div>
+    </div>
+
