--- a/src/app/list-of-movies/single-movie/single-movie.component.html
+++ b/src/app/list-of-movies/single-movie/single-movie.component.html
@@ -1,22 +1,24 @@
     <div class="movie-wrapper" >
     <div class="movie-image">
         <div class="movie-image-poster">
-            <img src={{movie.image}} alt="">
+            <!-- <img src={{movie.image}} alt=""> -->
+            <p>{{reperoire.movie.title}}</p>
         </div>
     </div>
     <div class="movie-info">
-        <h1 class="movie-info-title">{{movie.title}}</h1>
+        <h1>{{reperoire.movie.descriptionShort}}</h1>
+        <!-- <h1 class="movie-info-title">{{movie.title}}</h1>
         <p class="movie-info-about">{{movie.genre}} | {{movie.runTime}} | {{movie.pg}}</p>
         <p class="movie-info-description">
             {{isFullyBlown ? movie.descriptionShort : movie.descriptionShort | truncate:120}} 
-        </p>
+        </p> -->
         <p class="movie-info-description-show" (click)="handleVisibiltyDescription()">{{isFullyBlown ? 'Ukryj' : 'Więcej'}}</p>
         <div class="btn-group">
             <!-- <a href="#!" class="btn btn-data-select" *ngFor="let hour of movie.seassionHours"><button>{{hour}}</button></a> -->
         </div>
     </div>
     <div class="movie-rating">
-        <p class="rate">{{movie.rating}} / 10</p>
+        <!-- <p class="rate">{{movie.rating}} / 10</p> -->
     </div>
     </div>
 
