--- a/src/app/list-of-movies/single-movie/single-movie.component.html
+++ b/src/app/list-of-movies/single-movie/single-movie.component.html
@@ -1,12 +1,14 @@
     <div class="movie-wrapper" >
+        <p>single movie works</p>
     <div class="movie-image">
         <div class="movie-image-poster">
+            <p>{{movie.movie.title}}</p>
             <!-- <img src={{movie.image}} alt=""> -->
-            <p>{{reperoire.movie.title}}</p>
         </div>
     </div>
     <div class="movie-info">
-        <h1>{{reperoire.movie.descriptionShort}}</h1>
+
+        <!-- <h1>{{movie.descriptionShort}}</h1> -->
         <!-- <h1 class="movie-info-title">{{movie.title}}</h1>
         <p class="movie-info-about">{{movie.genre}} | {{movie.runTime}} | {{movie.pg}}</p>
         <p class="movie-info-description">
