--- a/src/app/list-of-movies/list-of-movies.component.css
+++ b/src/app/list-of-movies/list-of-movies.component.css
@@ -1,5 +1,9 @@
-.listOfMoviesWrapper{
-    margin: 0 auto;
-    text-align: center;
-    border: 1px solid black;
+.listOfMoviesWrapper {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.listOfMovies {
+  margin: 0 auto;
+  text-align: center;
 }
