--- a/src/app/list-of-movies/list-of-movies.component.html
+++ b/src/app/list-of-movies/list-of-movies.component.html
@@ -1,10 +1,8 @@
 <div class="listOfMoviesWrapper">
-    <p>list-of-movies works!</p>
-    <app-calendar></app-calendar>
-   <!-- <div *ngFor="let movie of reperoire | async"></div> -->
-       <!--   <app-single-movie [movie]="movie" *ngFor="let movie of movies | async"></app-single-movie> -->
-
-        <app-single-movie *ngFor="let movie of movies | async" [movie]="movie">
-            
-        </app-single-movie>
+  <app-calendar></app-calendar>
+  <app-single-movie
+    class="listOfMovies"
+    *ngFor="let movie of movies | async"
+    [movie]="movie"
+  ></app-single-movie>
 </div>
