--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,8 @@
 <div class="top-bar">
-    <p class="top-bar--title">KINO</p>
-    <div class="top-bar--login-panel">
-    <button>🛒</button>
-    <button>Zaloguj</button>
-    </div>
+  <p class="top-bar--title">KINO</p>
+  <div class="top-bar--login-panel">
+    <button mat-raised-button>🛒</button>
+    <button mat-raised-button [routerLink]="'/login'">Zaloguj</button>
+  </div>
 </div>
-<hr>
+<hr />
