--- a/src/app/top-bar/top-bar.component.css
+++ b/src/app/top-bar/top-bar.component.css
@@ -1,22 +1,22 @@
-.top-bar{
-    height: 80px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.top-bar {
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: right;
 }
 
-.top-bar--title{
-    flex-basis: 80%;
-    text-align: center;
-    margin: 0 auto;
+.top-bar--title {
+  flex-basis: 50%;
+  margin: 0 auto;
 }
 
-.top-bar--login-panel{
-    
+.top-bar--login-panel {
+  flex-basis: 50%;
 }
 
-button{
-    width: 100px;
-    height: 30px;
-    margin: 5px;
+button {
+  width: 120px;
+  height: 40px;
+  margin: 0 20px 0 0;
 }
