--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,5 +1,5 @@
 <div class="top-bar">
-  <p class="top-bar--title">KINO</p>
+  <p class="top-bar--title" [routerLink]="'/'">KINO</p>
   <div class="top-bar--login-panel">
     <button mat-raised-button>🛒</button>
     <button mat-raised-button [routerLink]="'/login'">Zaloguj</button>
