--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -1,7 +1,6 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-@use '@angular/material' as mat;
+@use "@angular/material" as mat;
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
@@ -20,16 +19,29 @@ $new-cinema-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$new-cinema-theme: mat.define-light-theme((
-  color: (
-    primary: $new-cinema-primary,
-    accent: $new-cinema-accent,
-    warn: $new-cinema-warn,
+$new-cinema-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $new-cinema-primary,
+      accent: $new-cinema-accent,
+      warn: $new-cinema-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.all-component-themes($new-cinema-theme);
 
+mat-mdc-form-field-infix {
+  width: 300px;
+}
+
+mat-mdc-text-field-wrapper {
+  width: 400px;
+}
+
+mat-mdc-form-field {
+  background-color: violet;
+}
