--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -45,3 +45,11 @@ mat-mdc-text-field-wrapper {
 mat-mdc-form-field {
   background-color: violet;
 }
+mat-spinner {
+  margin: 100px;
+}
+
+.mat-mdc-menu-content {
+  width: 125px;
+  font-size: 12px;
+}
