--- a/src/app/list-of-movies/list-of-movies.component.css
+++ b/src/app/list-of-movies/list-of-movies.component.css
@@ -1,3 +1,12 @@
+:host {
+  min-height: 100vh;
+  min-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+
 .listOfMoviesWrapper {
   margin: 0 auto;
   text-align: center;
@@ -6,4 +15,5 @@
 .listOfMovies {
   margin: 0 auto;
   text-align: center;
+  width: 100%;
 }
