--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,28 @@
 <div class="top-bar">
   <p class="top-bar--title" [routerLink]="'/'">KINO</p>
-  <div class="top-bar--login-panel">
+
+  <div class="top-bar--login-panel" *ngIf="(user | async)!.user as user">
     <button mat-raised-button>🛒</button>
-    <button mat-raised-button [routerLink]="'/login'">Zaloguj</button>
+    <ng-container *ngIf="(authValue | async)!.hasAuth; else offline">
+      <!-- <button mat-raised-button [routerLink]="'/login'">
+        Witaj {{ user.name }}
+      </button> -->
+      <button mat-raised-button [matMenuTriggerFor]="menu">
+        Witaj {{ user.name }}
+      </button>
+      <mat-menu #menu="matMenu">
+        <button mat-menu-item>Moje bilety</button>
+        <button mat-menu-item>Chcę obejrzec</button>
+        <button mat-menu-item>Ustawienia</button>
+        <button mat-menu-item (click)="authStateService.logout()">
+          Wyloguj
+        </button>
+      </mat-menu>
+    </ng-container>
+    <ng-template #offline>
+      <button mat-raised-button [routerLink]="'/login'">Zaloguj</button>
+    </ng-template>
   </div>
 </div>
+
 <hr />
