--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,7 +1,7 @@
 <div class="top-bar">
   <p class="top-bar--title" [routerLink]="'/'">KINO</p>
 
-  <div class="top-bar--login-panel" *ngIf="(user | async)!.user as user">
+  <div class="top-bar--login-panel" *ngIf="(user | async)! as user">
     <button mat-raised-button>🛒</button>
     <ng-container *ngIf="(authValue | async)!.hasAuth; else offline">
       <!-- <button mat-raised-button [routerLink]="'/login'">
