--- a/src/app/shared/components/top-bar/top-bar.component.html
+++ b/src/app/shared/components/top-bar/top-bar.component.html
@@ -11,9 +11,11 @@
         Witaj {{ user.name }}
       </button>
       <mat-menu #menu="matMenu">
-        <button mat-menu-item>Moje bilety</button>
-        <button mat-menu-item>Chcę obejrzec</button>
-        <button mat-menu-item>Ustawienia</button>
+        <button mat-menu-item [routerLink]="'/my-tickets'">Moje bilety</button>
+        <button mat-menu-item [routerLink]="'/watch-list'">
+          Chcę obejrzec
+        </button>
+        <button mat-menu-item [routerLink]="'/settings'">Ustawienia</button>
         <button mat-menu-item (click)="authStateService.logout()">
           Wyloguj
         </button>
