--- a/src/app/movies/watch-list/single-watch-record/single-watch-record.component.html
+++ b/src/app/movies/watch-list/single-watch-record/single-watch-record.component.html
@@ -1,17 +1,18 @@
+<!-- <ng-container *ngIf="(dataMovie | async) === null"></ng-container> -->
 <mat-card class="single-watch-record-class">
   <mat-card-header>
-    <mat-card-title class="title">{{ dataMovie.title }}</mat-card-title>
-    <mat-card-subtitle class="genre">{{ dataMovie.genre }}</mat-card-subtitle>
+    <mat-card-title class="title">{{ record.movie }}</mat-card-title>
+    <mat-card-subtitle class="genre">{{ record.genre }}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
-    <div (click)="selectVideo(dataMovie)" class="videoWrapper">
+    <div (click)="selectVideo(dataMovie!)" class="videoWrapper">
       <youtube-player
         [height]="325"
         [width]="700"
         [videoId]="videoId"
       ></youtube-player>
     </div>
-    <p class="description">{{ dataMovie.descriptionShort }}</p>
+    <p class="description">{{ record.descriptionShort }}</p>
     <div class="details">
       <p>
         Duration:
