--- a/src/app/movies/watch-list/single-watch-record/single-watch-record.component.html
+++ b/src/app/movies/watch-list/single-watch-record/single-watch-record.component.html
@@ -1,31 +1,34 @@
-<!-- <ng-container *ngIf="(dataMovie | async) === null"></ng-container> -->
-<mat-card class="single-watch-record-class">
-  <mat-card-header>
-    <mat-card-title class="title">{{ record.movie }}</mat-card-title>
-    <mat-card-subtitle class="genre">{{ record.genre }}</mat-card-subtitle>
-  </mat-card-header>
-  <mat-card-content>
-    <div (click)="selectVideo(dataMovie!)" class="videoWrapper">
-      <youtube-player
-        [height]="325"
-        [width]="700"
-        [videoId]="videoId"
-      ></youtube-player>
-    </div>
-    <p class="description">{{ record.descriptionShort }}</p>
-    <div class="details">
-      <p>
-        Duration:
-        {{ dataMovie.runTime }} minutes
-      </p>
-      <p>Age category: {{ dataMovie.pg }}</p>
-      <p>Cast: {{ dataMovie.cast }}</p>
-    </div>
+<ng-container>
+  <mat-card class="single-watch-record-class">
+    <mat-card-header>
+      <mat-card-title class="title">{{ showRecord.title }}</mat-card-title>
+      <mat-card-subtitle class="genre">{{
+        showRecord.genre
+      }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <div (click)="selectVideo(showRecord)" class="videoWrapper">
+        <youtube-player
+          [height]="325"
+          [width]="700"
+          [videoId]="showRecord.videoId"
+        ></youtube-player>
+      </div>
+      <p class="description">{{ showRecord.descriptionShort }}</p>
+      <div class="details">
+        <p>
+          Duration:
+          {{ showRecord.runTime }} minutes
+        </p>
+        <p>Age category: {{ showRecord.pg }}</p>
+        <p>Cast: {{ showRecord.cast }}</p>
+      </div>
 
-    <mat-card-footer class="footer">
-      <button class="btn" mat-stroked-button (click)="remove(record.movie)">
-        Usuń z sekcji Chcę obejrzeć
-      </button></mat-card-footer
-    >
-  </mat-card-content>
-</mat-card>
+      <mat-card-footer class="footer">
+        <button class="btn" mat-stroked-button (click)="remove(showRecord.id)">
+          Usuń z sekcji Chcę obejrzeć
+        </button></mat-card-footer
+      >
+    </mat-card-content>
+  </mat-card>
+</ng-container>
