--- a/src/app/movies/watch-list/watch-list.component.html
+++ b/src/app/movies/watch-list/watch-list.component.html
@@ -1,7 +1,7 @@
-<ng-container *ngIf="watchList$ | async as records; else loader">
+<ng-container *ngIf="showList | async as showList; else loader">
   <app-single-watch-record
-    *ngFor="let record of records"
-    [record]="record"
+    *ngFor="let showRecord of showList"
+    [showRecord]="showRecord"
   ></app-single-watch-record>
 </ng-container>
 <ng-template class="spinner" #loader>
