corrects after review

--- a/src/app/admin/admin-view.component.html
+++ b/src/app/admin/admin-view.component.html
@@ -1,4 +1,2 @@
 <p>admin-view works!</p>
-<h1>Zacznij kurwa działać!!!</h1>
-<h1>Zacznij kurwa działać!!!</h1>
-<h1>Zacznij kurwa działać!!!</h1>
+<p>Dla Admina Rafał zrobi oddzielny modul kiedy nauczy sie ngrx</p>
