--- a/src/app/movies/repertoure/list-of-movies.component.html
+++ b/src/app/movies/repertoure/list-of-movies.component.html
@@ -1,13 +1,10 @@
 <app-calendar></app-calendar>
-<ng-container *ngIf="movies | async as movies; else loader">
-  <!-- <div class="listOfMoviesWrapper"> -->
-  <!-- <app-calendar></app-calendar> -->
+<ng-container *ngIf="movies$ | async as movies; else loader">
   <app-single-movie
-    class="listOfMovies"
+    class="list-of-movies"
     *ngFor="let movie of movies"
     [movie]="movie"
   ></app-single-movie>
-  <!-- </div> -->
 </ng-container>
 <ng-template class="spinner" #loader>
   <mat-spinner></mat-spinner>
