--- a/src/app/order/order-form/order-form.component.html
+++ b/src/app/order/order-form/order-form.component.html
@@ -2,9 +2,9 @@
 <ul>
   <li>Rzad D Miejsce 6 XX PLN</li>
 </ul>
-<p class="totalPrize">Razem: XX PLN</p>
-<form [formGroup]="orderTicketsForm" class="orderForm">
-  <div class="ordererName">
+<p class="total-prize">Razem: XX PLN</p>
+<form [formGroup]="orderTicketsForm" class="order-form">
+  <div class="orderer-name">
     <mat-form-field
       class="orderer-name-input orderer-name-input-name"
       appearance="outline"
@@ -24,7 +24,7 @@
       }}</mat-error>
     </mat-form-field>
   </div>
-  <div class="ordererContact">
+  <div class="orderer-contact">
     <mat-form-field appearance="outline" class="orderer-tel-input">
       <mat-label>Numer telefonu</mat-label>
       <input
@@ -64,10 +64,10 @@
       }}</mat-error>
     </mat-form-field>
   </div>
-  <div class="ordererPromo">
-    <div class="ordererPromoApproval">
+  <div class="orderer-promo">
+    <div class="orderer-promo-approval">
       <label class="switch">
-        <input formControlName="newsletterToggler" type="checkbox" />
+        <input formControlName="newsletter-toggler" type="checkbox" />
         <span class="slider round"></span>
       </label>
       <p>Chcę otrzymywać informację o zniżkach, promocjach itp</p>
