--- a/src/app/movies/repertoure/list-of-movies.component.css
+++ b/src/app/movies/repertoure/list-of-movies.component.css
@@ -7,12 +7,7 @@
   justify-content: flex-start;
 }
 
-.listOfMoviesWrapper {
-  margin: 0 auto;
-  text-align: center;
-}
-
-.listOfMovies {
+.list-of-movies {
   margin: 0 auto;
   text-align: center;
   width: 100%;
