--- a/src/app/movies/watch-list/single-watch-record/single-watch-record.component.html
+++ b/src/app/movies/watch-list/single-watch-record/single-watch-record.component.html
@@ -7,7 +7,7 @@
       }}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <div (click)="selectVideo(showRecord)" class="videoWrapper">
+      <div (click)="selectVideo(showRecord)" class="video-wrapper">
         <youtube-player
           [height]="325"
           [width]="700"
