--- a/src/app/order/order-form/order-form.component.css
+++ b/src/app/order/order-form/order-form.component.css
@@ -24,20 +24,20 @@ p {
   margin-left: 10px;
 }
 
-.totalPrize {
+.total-prize {
   text-align: center;
   width: fit-content;
   margin: 0 auto 25px auto;
 }
 
-.orderForm {
+.order-form {
   width: 50%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 
-.ordererName {
+.orderer-name {
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -45,17 +45,17 @@ p {
   color: white;
 }
 
-.ordererContact {
+.orderer-contact {
   display: flex;
   flex-direction: column;
 }
 
-.ordererPromo {
+.orderer-promo {
   display: flex;
   flex-direction: column;
 }
 
-.ordererPromoApproval {
+.orderer-promo-approval {
   display: flex;
   align-items: center;
 }
